Updated style to fix width issue on Safari. Fixes #11

--- a/glider.css
+++ b/glider.css
@@ -2,7 +2,7 @@
 .glider {
     overflow: hidden;
     position: relative;
-    max-width: 100vw !important;
+    max-width: 100% !important;
 }
 
 .glider-list {
